rather than calculated in software. Thank you user Peter Ferencz!

For WMR9x8 stations, the first extra temperature sensor (packet code 4)
now shows up as extraTemp1 (instead of outTemp). Thanks again to 
Peter Ferencz.

For WMR9x8 stations, packet types 2 and 3 have been separated. Only the
latter is used for outside temperature, humidity, dewpoint. The former
is used for "extra" sensors. Thanks to Per Edström for his patience
in figuring this out!

For WMR200 stations, altitude-corrected pressure is now emitted correctly.

For WMR200 stations, a "could not detach kernel driver" is now a DEBUG
message, instead of an error message. This will make the driver much less
chatty.

ws28xx driver improvements, including: better thread control; better logging
for debugging/diagnostics; better timing to reduce dropouts; eliminate writes
to disk to reduce wear when used on flash devices. Plus, support for
multiple stations on the same USB.

Fixed rain units in ws28xx driver.

The LOOP value for daily ET on Vantages was too high by a factor of 10. 
This has been corrected.

Fixed a bug that caused values of ET to be miscalculated when using
software record generation.

Ported to Korora 19 (Fedora 19). Thanks to user zmodemguru!

Plots under 16 hours in length, now use 1 hour increments (instead of 
3 hours).

No longer emits "deprecation" warning when working with some versions
of the MySQLdb python driver.

Added ability to build platform-specific RPMs, e.g., one for RedHat-based
distributions and one for SuSE-based distributions.

Fixed the 'stop' and 'restart' options in the SuSE rc script.

The weewx logwatch script now recognizes more log entries and errors.


2.4.0 08/03/13

The configuration utility wee_config_vantage now allows you to set
DST to 'auto', 'off', or 'on'. It also lets you set either a time
zone code, or a time zone offset.

The service StdTimeSync now catches startup events and syncs the clock
on them. It has now been moved to the beginning of the list