@@ -1,11 +1,6 @@
 TODO before the next release:
 
-Every file seems to be getting regenerated instead of just stale ones.
-
 Can wind chill be retrieved from the hardware for the WMR918
 (as well as WMR9x8)?
 
 Figure out why the heartbeat doesn't work on the WMR200.
-
-implement a mechanism to enable/disable restful services instead of depending
-on KeyError during initialization.
